# serialization

./: pyproject.toml
serial/: __init__.py  __main__.py  state.py
tests/: test_import.py
